[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Stages/Arena/Scripts/Camera.gd" type="Script" id=2]
[ext_resource path="res://Stages/Arena/Scripts/Arena.gd" type="Script" id=3]
[ext_resource path="res://Catch/Scenes/CatchNormal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stages/Arena/Scripts/GameStates.gd" type="Script" id=5]
[ext_resource path="res://Stages/Arena/Scripts/InitialGameState.gd" type="Script" id=6]
[ext_resource path="res://Stages/Arena/Scripts/NoteSpawner.gd" type="Script" id=7]

[sub_resource type="ConcavePolygonShape2D" id=1]
segments = PoolVector2Array( -80, -72, 80, -72, 80, 72, -80, 72, 80, -72, 80, 72, -80, 72, -80, -72 )

[node name="Arena" type="Node2D"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 30, 51 )

[node name="Walls" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2( 80, 72 )
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 80, 72 )
rotating = true
current = true
script = ExtResource( 2 )
maxOffSet = 12
maxAngle = 18
powerTraumaTo = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Notes" type="Node2D" parent="."]

[node name="GameStates" type="Node" parent="."]
script = ExtResource( 5 )

[node name="InitialGameState" type="Node" parent="GameStates"]
script = ExtResource( 6 )

[node name="Position2D" type="Position2D" parent="GameStates/InitialGameState"]
position = Vector2( 80, 72 )

[node name="NoteSpawner" type="Node2D" parent="."]
script = ExtResource( 7 )
note = ExtResource( 4 )

[connection signal="collision" from="Player" to="." method="_on_Player_collision"]
[connection signal="new_fence" from="Player" to="." method="_on_Player_new_fence"]
[connection signal="spawn_pin" from="Player" to="." method="_on_Player_spawn_pin"]
